--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.DynamicActivity"></activity>
         <activity android:name=".activities.StaticActivity" />
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".Tugas">
-        <intent-filter>
+        <activity android:name="Tugas"/>
+        <activity android:name=".MainActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
